# pupiltracker

./: .hgignore  CMakeLists.txt  ConicSection.h  LICENSE.md  PupilTracker.cpp  PupilTracker.h  README.md  camera.yml  cvx.cpp  cvx.h  high_resolution_timer.hpp  stdafx.h  timer.h  utils.cpp  utils.h
cmake/: FindTBB.cmake
cmd/: CMakeLists.txt  PupilTrackerCmd.cpp
lib/: CMakeLists.txt  ConicSection.h  PupilTracker.cpp  PupilTracker.h  cvx.cpp  cvx.h  timer.h  utils.cpp  utils.h
lib/pupiltracker/: ConicSection.h  PupilTracker.h  cvx.h  high_resolution_timer.hpp  timer.h  utils.h
